# skillhub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  manifest_spec.md  pyproject.toml  skillhub.mcpb
.github/workflows/: ci.yml  pages.yml
docs/: REGISTRY_SUBMISSION.md  index.html  index.md
docs/.well-known/mcp/: server-card.json
incoming/: clean-thing.json
mcpb_build/: manifest.json
mcpb_build/registry/: collections.json
mcpb_build/server/lib/skillhub/: collections.py  scan.py  trust.py
mcpb_build/server/lib/skillhub_mcp/: server.py
mcpb_build/test_bundle/: manifest.json  test.mcpb
mcpb_build/test_bundle/server/: index.js
registry/: dropped.jsonl  health.json  invalid.jsonl  skills.jsonl  trust.json
scripts/: check_entry_commands.py  enrich_tags.py  seed_from_sources.py
src/skillhub/: badges.py  cli.py  telemetry.py
src/skillhub_mcp/: server.py
tests/: conftest.py  test_badges.py  test_cli.py  test_collections.py  test_lifecycle.py  test_mcp.py  test_mcp2.py  test_resources.py  test_trust.py
tests/skills/clean/: skill.yaml
tests/skills/evil/: main.py  skill.yaml
