[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillhub"
version = "0.0.1"
description = "Trusted skill marketplace CLI for AI agents. Local-first."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "skillhub" }]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
skillhub = "skillhub.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package_data]
skillhub = ["py.typed"]
